--- a/front/src/App.css
+++ b/front/src/App.css
@@ -11,58 +11,26 @@ body{
   position: relative;
 }
 
-.control-button {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  z-index: 10;
-  user-select: none; /* 텍스트 선택 방지 */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7); /* 반투명한 배경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* 다른 요소보다 위에 표시 */
 }
 
-.control-button:hover {
-  background: rgba(0, 0, 0, 0.9);
-}
-
-.diary-button {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  z-index: 10;
-  user-select: none; /* 텍스트 선택 방지 */
-}
-
-.diary-button:hover {
-  background: rgba(0, 0, 0, 0.9);
-}
-
-.lp-button {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  z-index: 10;
-  user-select: none; /* 텍스트 선택 방지 */
-}
-
-.lp-button:hover {
-  background: rgba(0, 0, 0, 0.9);
+/* 로딩 화면 내용 */
+.loading-content {
+  color: black;
+  font-family: 'Ownglyph', sans-serif;
+  font-size: 32px;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 
