--- a/front/src/App.css
+++ b/front/src/App.css
@@ -33,6 +33,20 @@ body{
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.hovered-text {
+  position: absolute;
+  top: 15px; 
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-family: 'Ownglyph', sans-serif; 
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+  z-index: 1000;
+}
+
 
 .fetch-lp-button {
   position: absolute;
