--- a/front/src/LPRecordsPage.css
+++ b/front/src/LPRecordsPage.css
@@ -9,23 +9,25 @@
 
   .lp-header {
     position: fixed;
-    top: 50px;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     color: #333;
     font-family: 'Ownglyph', sans-serif;
     font-size: 36px;
     font-weight: bold;
+    text-align: center;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
     z-index: 1000;
+    height: 100px; /* 헤더 높이 설정 */
+    line-height: 100px; /* 텍스트를 수직 중앙 정렬 */
+    width: 100%; /* 헤더가 화면 전체에 걸치도록 */
   }
 
   .lp-box {
-    position: absolute;
-    top: 100px; /* 제목 아래 여백 */
-    left: 100px;
-    right: 500px;
-    bottom: 80px; /* 캘린더 위 여백 */
+    position:relative;
+    top: 120px;
+    padding: 0 480px 0 100px;
     overflow-y: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); 
@@ -151,6 +153,39 @@
   
   .play-button:hover {
     background-color: #F2B03F;
+  }
+
+  .home-cat-icon {
+    position: fixed; /* 화면의 고정 위치에 배치 */
+    bottom: 20px; /* 화면 아래에서 20px 떨어짐 */
+    right: 30px; /* 화면 오른쪽에서 20px 떨어짐 */
+    height: 200px;
+    width: 139.7px;
+    cursor: pointer; /* 클릭 가능 커서 */
+    z-index: 1000; /* 다른 요소 위에 배치 */
+  }
+  
+  .home-cat-icon:hover {
+    transform: scale(1.1); /* 마우스 오버 시 확대 효과 */
+    transition: transform 0.2s ease;
+  }
+
+  .sort-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .sort-icons img {
+    cursor: pointer;
+    width: 70px;
+    height: 70px;
+    transition: transform 0.2s ease;
+  }
+  
+  .sort-icons img:hover {
+    transform: scale(1.1);
   }
   
   @keyframes fade-in {
