--- a/front/src/CustomCalendar.css
+++ b/front/src/CustomCalendar.css
@@ -64,20 +64,23 @@
   }
   
   .react-calendar__tile:hover {
-    background-color: rgba(0, 128, 255, 0.2);
+    background-color: rgba(114,176,171, 0.2);
     transform: scale(1.05);
   }
   
   .react-calendar__tile--now {
-    background: rgba(0, 128, 255, 0.3); /* 오늘 날짜 강조 */
+    background: rgba(114,176,171, 0.3); /* 오늘 날짜 강조 */
     color: white;
     font-weight: bold;
   }
   
   .react-calendar__tile--active {
-    background: rgba(255, 128, 0, 0.7); /* 선택된 날짜 강조 */
+    background: rgba(242,176,63, 0.7); /* 선택된 날짜 강조 */
     color: white;
   }
+  .react-calendar__tile--active:enabled:hover, .react-calendar__tile--active:enabled:focus {
+    background: rgba(114,176,171);
+}
   
   .react-calendar__month-view__days__day--weekend {
     color: black;
