--- a/front/src/LPRecordsPage.css
+++ b/front/src/LPRecordsPage.css
@@ -35,6 +35,18 @@
     justify-content: center; /* 카드 중앙 정렬 */
     align-content: center; /* 상하 중앙 정렬 */
   }
+
+  .no-lp-message {
+    font-family: 'Ownglyph', sans-serif;
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    margin-top: 50px;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
   
   .lp-cover {
     cursor: pointer;
