feat - 노래 재생 오류 수정...

--- a/front/src/LPRecordsPage.css
+++ b/front/src/LPRecordsPage.css
@@ -160,6 +160,7 @@
     cursor: pointer;
     font-family: 'Ownglyph', sans-serif;
     font-size: 18px;
+    pointer-events: auto;
   }
   
   .play-button:hover {
