--- a/front/src/LPRecordsPage.css
+++ b/front/src/LPRecordsPage.css
@@ -94,6 +94,7 @@
     z-index: 2;
     padding: 30px;
     border-radius: 10px;
+    max-height: 80vh;
     width: 500px;
     text-align: center;
     align-items: center;
@@ -152,6 +153,8 @@
     font-family: 'Ownglyph', sans-serif;
     font-size: 28px;
     color: #333;
+    overflow-y: auto;
+    max-height: 25vh;
   }
   
   .play-button {
