--- a/front/src/LPRecordsPage.css
+++ b/front/src/LPRecordsPage.css
@@ -155,6 +155,7 @@
     color: #333;
     overflow-y: auto;
     max-height: 25vh;
+    padding: 0 10px;
   }
   
   .play-button {
@@ -206,6 +207,31 @@
     box-shadow: none;
     background: transparent;
   }
+
+    /* 전체 스크롤바의 너비와 높이 조정 */
+  ::-webkit-scrollbar {
+    width: 12px;  /* 스크롤바의 너비 */
+    height: 12px; /* 가로 스크롤바의 높이 */
+  }
+
+  /* 스크롤바의 트랙(바탕) 스타일 */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;  /* 트랙의 배경색 */
+    border-radius: 10px;   /* 둥근 모서리 */
+  }
+
+  /* 스크롤바의 핸들(움직이는 부분) 스타일 */
+  ::-webkit-scrollbar-thumb {
+    background: #C16200; /* 그라데이션 색상 */
+    border-radius: 10px; /* 둥근 모서리 */
+    border: 2px solid #fff; /* 테두리 */
+  }
+
+  /* 스크롤바 핸들 호버 시 스타일 */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #994d00;  /* 마우스 오버 시 색상 */
+  }
+
 
   .home-cat-icon {
     position: fixed; /* 화면의 고정 위치에 배치 */
